
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Changed
- [REPUTATION_CTX] Allow to configure if custom Reputation Context DBs should be downloaded every hour
- [REPUTATION_CTX] Set back update crontab to download Reputation Context files every hour


## [2.32.0] - 2025-10-13
### Added
- [FRONTEND] New Rsyslog custom actions
- [API_PARSER] [MESSAGETRACE_O365] New collector
### Changed
- [DEPENDENCIES]
  - msal added -> 1.34.0


## [2.31.0] - 2025-09-12
### Added
- [API_PARSER] [CROWDSTRIKE] Add identities to fetched information
### Changed
- [API_PARSER] [GATEWATCHER_ALERTS] Only fetch at most 1 hour time ranges
### Fixed
- [LOG_FORMAT] [HAPROXY] Use correct log-format field for haproxy HTTP path only
- [PORTAL] [JWT] Correctly write IDP certificate files on system for JWT validation
- [LOGFWD] [FORM] Avoid KeyError exceptions when updating a LogForwarder
- [SYSTEM] [PKI] Correctly handle whitespaces in X509Certificate filenames
- [PORTAL] Correctly filter users on Authentication ACLs enabled Workflows for any type of authentication
- [PORTAL] [SELF_SERVICE] Only show allowed (Authentication ACLs) Apps to authenticated user


## [2.30.0] - 2025-09-04
### Added
- [LOG_FORWARDER] [SENTINEL] Add new Log Forwarder to Vulture GUI
### Fixed
- [PF] [CONF] Add missing CARP rule to allow inter-cluster broadcasting and enable correct MASTER/BACKUP switch
- [NET] [CARP] Correctly clean system configurations when removing some interface(s) from an existing CARP conf
- [NET] [CARP] Correctly use existing carp password and priorities for added interface(s) on an existing CARP conf


## [2.29.1] - 2025-08-22
### Added
- [RSYSLOG] add mmutf8fix to default loaded modules
### Fixed
- [PORTAL] [HAPROXY] Only set X-Forwarded-Proto header if it doesn't already exist in request
- [LOGFWD] [KAFKA] Correctly use key value for templating

